force-app/main/default/objects/TripContact__c/TripContact__c.object-meta.xml
<CustomObject>
    <label>Contact Visited</label>
    <nameField>
        <displayFormat>TC-{00000}</displayFormat>
        <label>TripContact</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contacts Visited</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>