force-app/main/default/objects/TripContact__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <formula>TripContact__r.Email</formula>
    <label>Email</label>
    <type>Text</type>
</CustomField>