force-app/main/default/objects/TripContact__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <formula>TripContact__r.Title</formula>
    <label>Title</label>
    <type>Text</type>
</CustomField>