force-app/main/default/objects/TripContact__c/fields/TripContact__c.field-meta.xml
<CustomField>
    <fullName>TripContact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Trip Reports</relationshipLabel>
    <relationshipName>Trip_Visit</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>