force-app/main/default/objects/TripContact__c/fields/TripReport__c.field-meta.xml
<CustomField>
    <fullName>TripReport__c</fullName>
    <label>Trip Report</label>
    <referenceTo>Trip_Report__c</referenceTo>
    <relationshipLabel>Contacts Visited</relationshipLabel>
    <relationshipName>Contacts_Visited</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>