force-app/main/default/objects/TripContact__c/fields/Visited__c.field-meta.xml
<CustomField>
    <fullName>Visited__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visited?</label>
    <type>Checkbox</type>
</CustomField>