force-app/main/default/objects/TripContact__c/fields/Visited_Y_N__c.field-meta.xml
<CustomField>
    <fullName>Visited_Y_N__c</fullName>
    <formula>IF(Visited__c, &quot;Y&quot;, &quot; &quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visited Y/N</label>
    <type>Text</type>
</CustomField>